--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
     "useTabs": false,
     "semi": true,
     "singleQuote": true,
-    "printWidth": 120,
-    "bracketSpacing": true
+    "printWidth": 100,
+    "bracketSpacing": true,
+    "plugins": ["@ianvs/prettier-plugin-sort-imports"]
 }
